--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "edouard-lamy/package-laravel-fingerprint-lamy": "^1.0",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
@@ -78,11 +77,5 @@
         }
     },
     "minimum-stability": "stable",
-    "prefer-stable": true,
-    "repositories": [
-        {
-            "type": "path",
-            "url": "/Users/edouardlamy/Documents/Dev-perso/package-laravel-fingerprint-lamy"
-        }
-    ]
+    "prefer-stable": true
 }
